--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
-    background: #2c18a0;
-    background: linear-gradient(240deg, #2c18a0 19%, #fcfcfc 100%);
-    color: #fff;
+    background: #F5948F;
+    background: linear-gradient(180deg, #fcfcfc 10%, #F5948F 100%);
+    color: black;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     letter-spacing: 2px;
@@ -20,11 +20,11 @@ img {
     height: auto;
     max-width: 105px;
 }
-    
+
 .profile {
     text-align: center;
     font-size: 15px;
-    letter-spacing: 2px;   
+    letter-spacing: 2px;
     margin: 0;
 }
 
@@ -56,7 +56,7 @@ a.profile:hover{
     text-align: center;
     margin-top: 20px;
     padding: 20px;
-    border: 1px solid white;
+    border: 1px solid black;
     border-width: 2px;
     width: 290px;
     max-width: 60vw;
@@ -68,20 +68,20 @@ a.profile:hover{
 }
 
 a {
-    color: white;
+    color: black;
     transition: color 0.3s;
 }
 
 a.links:hover {
-    color: #f66960;
+    color: #E53024;
     background: #fff;
 }
 
 .fa_custom {
     color: #1a0350;
     margin-top: 60px;
-    text-align: center; 
-    width: 100%; 
+    text-align: center;
+    width: 100%;
 }
 
 a i:hover{
@@ -94,4 +94,3 @@ a i:hover{
     font-size: 20px;
     font-weight: bold;
 }
-
